--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
+    "@apollo/client": "3.11.4",
+    "@nextui-org/react": "2.4.6",
+    "@reduxjs/toolkit": "2.2.7",
+    "framer-motion": "11.3.24",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-redux": "9.1.2",
+    "swr": "2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/js": "9.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "7.35.0",
+    "globals": "15.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5",
+    "typescript-eslint": "8.1.0"
   }
 }
