--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@apollo/client": "3.11.4",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
+    "@wormhole-foundation/sdk": "0.10.2",
+    "axios": "1.7.4",
+    "bip39": "3.1.0",
     "framer-motion": "11.3.24",
     "next": "14.2.5",
     "react": "^18",
