--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@apollo/client": "3.11.4",
+    "@heroicons/react": "2.1.5",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
     "@wormhole-foundation/sdk": "0.10.2",
     "axios": "1.7.4",
     "bip39": "3.1.0",
+    "formik": "2.4.6",
     "framer-motion": "11.3.24",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "9.1.2",
-    "swr": "2.2.5"
+    "swr": "2.2.5",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
