--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.11.4",
+    "@aptos-labs/ts-sdk": "1.27.0",
     "@heroicons/react": "2.1.5",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
@@ -18,6 +19,7 @@
     "bip39": "3.1.0",
     "formik": "2.4.6",
     "framer-motion": "11.3.24",
+    "lucide-react": "0.428.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
