--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "2.1.5",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
+    "@solana/web3.js": "^1.95.3",
     "@wormhole-foundation/sdk": "0.10.2",
     "axios": "1.7.4",
     "bip39": "3.1.0",
