--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "framer-motion": "11.3.24",
     "lucide-react": "0.428.0",
     "next": "14.2.5",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "9.1.2",
+    "server-only": "^0.0.1",
     "swr": "2.2.5",
     "yup": "1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "8.57.0",
