--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "9.1.2",
     "server-only": "^0.0.1",
     "swr": "2.2.5",
+    "uuid": "10.0.0",
     "yup": "1.4.0"
   },
   "devDependencies": {
