--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "aptos": "1.21.0",
     "axios": "1.7.4",
     "bip39": "3.1.0",
+    "dayjs": "1.11.13",
     "formik": "2.4.6",
     "framer-motion": "11.3.24",
+    "lodash": "4.17.21",
     "lucide-react": "0.428.0",
     "next": "14.2.5",
     "numeral": "^2.0.6",
