--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "1.7.4",
     "bip39": "3.1.0",
     "dayjs": "1.11.13",
+    "ethereumjs-wallet": "1.0.2",
+    "ethers": "6.13.2",
     "formik": "2.4.6",
     "framer-motion": "11.3.24",
     "lodash": "4.17.21",
@@ -36,6 +38,7 @@
     "server-only": "^0.0.1",
     "swr": "2.2.5",
     "uuid": "10.0.0",
+    "web3": "4.12.1",
     "yup": "1.4.0"
   },
   "devDependencies": {
