--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       uses: actions/checkout@v2 
  
     - name: Run `docker compose`
-      run: docker compose -f docker/docker-compose-production.yaml -p ci-wallet up --build -d 
+      run: docker compose -f docker/production.yaml -p ci-wallet up --build -d 
