--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "lodash": "4.17.21",
     "lucide-react": "0.428.0",
     "next": "14.2.5",
+    "next-themes": "0.3.0",
     "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "2.4.1",
     "react-redux": "9.1.2",
     "server-only": "^0.0.1",
     "swr": "2.2.5",
