--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "3.11.4",
     "@aptos-labs/aptos-faucet-client": "0.2.0",
     "@aptos-labs/ts-sdk": "1.27.0",
+    "@heroiclabs/nakama-js": "^2.8.0",
     "@heroicons/react": "2.1.5",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
@@ -21,7 +22,7 @@
     "@wormhole-foundation/sdk-aptos": "0.10.2",
     "@wormhole-foundation/sdk-solana": "0.10.2",
     "aptos": "1.21.0",
-    "axios": "1.7.4",
+    "axios": "^1.7.4",
     "bip39": "3.1.0",
     "dayjs": "1.11.13",
     "ethereumjs-wallet": "1.0.2",
