--- a/docker/production.yaml
+++ b/docker/production.yaml
@@ -4,5 +4,11 @@ services:
       context: ..
     environment:
       NODE_ENV: production
+      NEXT_PUBLIC_CIFARM_CORE_KEY: ${{NEXT_PUBLIC_CIFARM_CORE_KEY}}
+      NEXT_PUBLIC_CIFARM_CORE_HOST: ${{NEXT_PUBLIC_CIFARM_CORE_HOST}}
+      NEXT_PUBLIC_CIFARM_CORE_PORT: ${{NEXT_PUBLIC_CIFARM_CORE_PORT}}
+      NEXT_PUBLIC_CIFARM_CORE_USE_SSL: ${{NEXT_PUBLIC_CIFARM_CORE_USE_SSL}}
+      NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: ${{NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL}}
+      NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: ${{NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL}}
     ports:
       - 3053:3000
