--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: self-hosted
     environment: docker
     env:
+        NODE_ENV: ${{vars.NODE_ENV}}
         NEXT_PUBLIC_CIFARM_CORE_KEY: ${{vars.NEXT_PUBLIC_CIFARM_CORE_KEY}}
         NEXT_PUBLIC_CIFARM_CORE_HOST: ${{vars.NEXT_PUBLIC_CIFARM_CORE_HOST}}
         NEXT_PUBLIC_CIFARM_CORE_PORT: ${{vars.NEXT_PUBLIC_CIFARM_CORE_PORT}}
