--- a/docker/production.yaml
+++ b/docker/production.yaml
@@ -2,13 +2,14 @@ services:
   server:
     build:
       context: ..
-    args:
-      NODE_ENV: production
-      NEXT_PUBLIC_CIFARM_CORE_KEY: ${NEXT_PUBLIC_CIFARM_CORE_KEY}
-      NEXT_PUBLIC_CIFARM_CORE_HOST: ${NEXT_PUBLIC_CIFARM_CORE_HOST}
-      NEXT_PUBLIC_CIFARM_CORE_PORT: ${NEXT_PUBLIC_CIFARM_CORE_PORT}
-      NEXT_PUBLIC_CIFARM_CORE_USE_SSL: ${NEXT_PUBLIC_CIFARM_CORE_USE_SSL}
-      NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL}
-      NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL}
+      args:
+        NEXT_PUBLIC_CIFARM_CORE_KEY: ${NEXT_PUBLIC_CIFARM_CORE_KEY}
+        NEXT_PUBLIC_CIFARM_CORE_HOST: ${NEXT_PUBLIC_CIFARM_CORE_HOST}
+        NEXT_PUBLIC_CIFARM_CORE_PORT: ${NEXT_PUBLIC_CIFARM_CORE_PORT}
+        NEXT_PUBLIC_CIFARM_CORE_USE_SSL: ${NEXT_PUBLIC_CIFARM_CORE_USE_SSL}
+        NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL}
+        NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL}
+    environment:
+      NODE_ENV: ${NODE_ENV}
     ports:
       - 3053:3000
