--- a/docker/development.yaml
+++ b/docker/development.yaml
@@ -2,7 +2,7 @@ services:
   server:
     build:
       context: ..
-    environment:
-      NODE_ENV: production
+    env_file:
+      ../.env.local
     ports:
       - 3053:3000
