--- a/docker/development.yaml
+++ b/docker/development.yaml
@@ -9,5 +9,7 @@ services:
         NEXT_PUBLIC_CIFARM_CORE_USE_SSL: false
         NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: "https://api.cifarm.starci.net/api/v1"
         NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: "https://api.cifarm.starci.net/graphql"
+    env_file:
+      ../.env.docker
     ports:
       - 3053:3000
