--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "9.1.2",
+    "react-unity-webgl": "^9.5.2",
     "server-only": "^0.0.1",
     "swr": "2.2.5",
     "uuid": "10.0.0",
