--- a/.env.docker
+++ b/.env.docker
@@ -1,1 +1,14 @@
+NEXT_PUBLIC_CIFARM_CORE_KEY=defaultkey
+NEXT_PUBLIC_CIFARM_CORE_HOST=localhost
+NEXT_PUBLIC_CIFARM_CORE_PORT=7350
+NEXT_PUBLIC_CIFARM_CORE_USE_SSL=false
+
+NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL=https://api.cifarm.starci.net/api/v1
+NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL=https://api.cifarm.starci.net/graphql
+
+NEXT_PUBLIC_CIFARM_LOADER_URL=https://api.cifarm.starci.net/api/v1/packages/loader
+NEXT_PUBLIC_CIFARM_DATA_URL=https://api.cifarm.starci.net/api/v1/packages/data
+NEXT_PUBLIC_CIFARM_FRAMEWORK_URL=https://api.cifarm.starci.net/api/v1/packages/framework
+NEXT_PUBLIC_CIFARM_WASM_URL=https://api.cifarm.starci.net/v1/packages/wasm
+
 NODE_ENV=production
