--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,18 @@ jobs:
     environment: docker
     env:
       NODE_ENV: ${{vars.NODE_ENV}}
+      
       NEXT_PUBLIC_CIFARM_CORE_KEY: ${{vars.NEXT_PUBLIC_CIFARM_CORE_KEY}}
       NEXT_PUBLIC_CIFARM_CORE_HOST: ${{vars.NEXT_PUBLIC_CIFARM_CORE_HOST}}
       NEXT_PUBLIC_CIFARM_CORE_PORT: ${{vars.NEXT_PUBLIC_CIFARM_CORE_PORT}}
       NEXT_PUBLIC_CIFARM_CORE_USE_SSL: ${{vars.NEXT_PUBLIC_CIFARM_CORE_USE_SSL}}
       NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: ${{vars.NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL}}
       NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: ${{vars.NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL}}
+      
+      NEXT_PUBLIC_CIFARM_LOADER_URL: ${{vars.NEXT_PUBLIC_CIFARM_LOADER_URL}}
+      NEXT_PUBLIC_CIFARM_DATA_URL: ${{vars.NEXT_PUBLIC_CIFARM_DATA_URL}}
+      NEXT_PUBLIC_CIFARM_FRAMEWORK_URL: ${{vars.NEXT_PUBLIC_CIFARM_FRAMEWORK_URL}}
+      NEXT_PUBLIC_CIFARM_WASM_URL: ${{vars.NEXT_PUBLIC_CIFARM_WASM_URL}} 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2 
