--- a/docker/development.yaml
+++ b/docker/development.yaml
@@ -9,7 +9,13 @@ services:
         NEXT_PUBLIC_CIFARM_CORE_USE_SSL: false
         NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: "https://api.cifarm.starci.net/api/v1"
         NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: "https://api.cifarm.starci.net/graphql"
+        NEXT_PUBLIC_CIFARM_LOADER_URL: "https://api.cifarm.starci.net/api/v1/packages/loader"
+        NEXT_PUBLIC_CIFARM_DATA_URL: "https://api.cifarm.starci.net/api/v1/packages/data"
+        NEXT_PUBLIC_CIFARM_FRAMEWORK_URL: "https://api.cifarm.starci.net/api/v1/packages/framework"
+        NEXT_PUBLIC_CIFARM_WASM_URL: "https://api.cifarm.starci.net/v1/packages/wasm"
     env_file:
       ../.env.docker
     ports:
       - 3053:3000
+
+# docker compose -f docker/development.yaml -p ci-wallet up --build -d 
