--- a/docker/development.yaml
+++ b/docker/development.yaml
@@ -12,7 +12,7 @@ services:
         NEXT_PUBLIC_CIFARM_LOADER_URL: "https://api.cifarm.starci.net/api/v1/packages/loader"
         NEXT_PUBLIC_CIFARM_DATA_URL: "https://api.cifarm.starci.net/api/v1/packages/data"
         NEXT_PUBLIC_CIFARM_FRAMEWORK_URL: "https://api.cifarm.starci.net/api/v1/packages/framework"
-        NEXT_PUBLIC_CIFARM_WASM_URL: "https://api.cifarm.starci.net/v1/packages/wasm"
+        NEXT_PUBLIC_CIFARM_WASM_URL: "https://api.cifarm.starci.net/api/v1/packages/wasm"
     env_file:
       ../.env.docker
     ports:
