--- a/docker/production.yaml
+++ b/docker/production.yaml
@@ -9,10 +9,10 @@ services:
         NEXT_PUBLIC_CIFARM_CORE_USE_SSL: ${NEXT_PUBLIC_CIFARM_CORE_USE_SSL}
         NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_API_URL}
         NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL: ${NEXT_PUBLIC_CIFARM_PERIPHERY_GRAPHQL_URL}
-        NEXT_PUBLIC_CIFARM_LOADER_URL: ${vars.NEXT_PUBLIC_CIFARM_LOADER_URL}
-        NEXT_PUBLIC_CIFARM_DATA_URL: ${vars.NEXT_PUBLIC_CIFARM_DATA_URL}
-        NEXT_PUBLIC_CIFARM_FRAMEWORK_URL: ${vars.NEXT_PUBLIC_CIFARM_FRAMEWORK_URL}
-        NEXT_PUBLIC_CIFARM_WASM_URL: ${vars.NEXT_PUBLIC_CIFARM_WASM_URL}
+        NEXT_PUBLIC_CIFARM_LOADER_URL: ${NEXT_PUBLIC_CIFARM_LOADER_URL}
+        NEXT_PUBLIC_CIFARM_DATA_URL: ${NEXT_PUBLIC_CIFARM_DATA_URL}
+        NEXT_PUBLIC_CIFARM_FRAMEWORK_URL: ${NEXT_PUBLIC_CIFARM_FRAMEWORK_URL}
+        NEXT_PUBLIC_CIFARM_WASM_URL: ${NEXT_PUBLIC_CIFARM_WASM_URL}
     environment:
       NODE_ENV: ${NODE_ENV}
     ports:
