--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@apollo/client": "3.11.4",
     "@aptos-labs/aptos-faucet-client": "0.2.0",
     "@aptos-labs/ts-sdk": "1.27.0",
+    "@ethers-ext/provider-multicall": "^6.0.0-beta.2",
     "@heroiclabs/nakama-js": "^2.8.0",
-    "@heroicons/react": "2.1.5",
+    "@heroicons/react": "^2.1.5",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
     "@solana/spl-token": "0.4.8",
