--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "ngrok":"ngrok http http://localhost:3000"
   },
   "dependencies": {
     "@apollo/client": "3.11.4",
@@ -22,6 +23,7 @@
     "@reduxjs/toolkit": "2.2.7",
     "@solana/spl-token": "0.4.8",
     "@solana/web3.js": "^1.95.3",
+    "@telegram-apps/sdk": "2.3.1",
     "@wormhole-foundation/sdk": "0.10.2",
     "@wormhole-foundation/sdk-aptos": "0.10.2",
     "@wormhole-foundation/sdk-solana": "0.10.2",
@@ -38,6 +40,7 @@
     "lucide-react": "0.428.0",
     "next": "14.2.5",
     "next-themes": "0.3.0",
+    "ngrok": "5.0.0-beta.2",
     "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
