--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "ngrok":"ngrok http http://localhost:3000"
+    "ngrok": "ngrok http http://localhost:3000"
   },
   "dependencies": {
     "@apollo/client": "3.11.4",
@@ -19,6 +19,7 @@
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "0.9.2",
+    "@mysten/sui": "1.11.0",
     "@nextui-org/react": "2.4.6",
     "@reduxjs/toolkit": "2.2.7",
     "@solana/spl-token": "0.4.8",
