too many updates

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
+    "@types/bs58": "4.0.4",
     "@types/node": "^20",
     "@types/numeral": "^2.0.5",
     "@types/react": "^18",
