--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.7.4",
     "bip39": "3.1.0",
     "dayjs": "1.11.13",
+    "dedot": "^0.6.0",
     "ethereumjs-wallet": "1.0.2",
     "ethers": "6.13.2",
     "formik": "2.4.6",
