--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@metaplex-foundation/umi-bundle-defaults": "0.9.2",
     "@mysten/sui": "1.11.0",
     "@nextui-org/react": "2.4.6",
+    "@polkadot/api": "^14.1.1",
     "@polkadot/util-crypto": "^13.2.1",
     "@reduxjs/toolkit": "2.2.7",
     "@solana/spl-token": "0.4.8",
