--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@solana/spl-token": "0.4.8",
     "@solana/web3.js": "^1.95.3",
     "@telegram-apps/sdk": "2.3.1",
+    "@unique-nft/sdk": "^2.1.2",
     "@wormhole-foundation/sdk": "0.10.2",
     "@wormhole-foundation/sdk-aptos": "0.10.2",
     "@wormhole-foundation/sdk-solana": "0.10.2",
