--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bip39": "3.1.0",
     "dayjs": "1.11.13",
     "dedot": "^0.6.0",
+    "dexie": "^4.0.9",
     "ethereumjs-wallet": "1.0.2",
     "ethers": "6.13.2",
     "formik": "2.4.6",
