--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dexie": "^4.0.9",
     "ethereumjs-wallet": "1.0.2",
     "ethers": "6.13.2",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
     "formik": "2.4.6",
     "framer-motion": "11.3.24",
     "lodash": "4.17.21",
