--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lodash": "4.17.21",
     "lucide-react": "0.428.0",
     "multiformats": "^13.3.0",
+    "near-api-js": "^5.0.1",
+    "near-seed-phrase": "^0.2.1",
     "next": "14.2.5",
     "next-themes": "0.3.0",
     "ngrok": "5.0.0-beta.2",
