finish near flow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,12 @@ jobs:
       NEXT_PUBLIC_CIFARM_DATA_NAME: ${{vars.NEXT_PUBLIC_CIFARM_DATA_NAME}}
       NEXT_PUBLIC_CIFARM_FRAMEWORK_NAME: ${{vars.NEXT_PUBLIC_CIFARM_FRAMEWORK_NAME}} 
       NEXT_PUBLIC_CIFARM_WASM_NAME: ${{vars.NEXT_PUBLIC_CIFARM_WASM_NAME}}
+
+      NEXT_PUBLIC_BASE_PERIPHERY_API_URL: ${{vars.NEXT_PUBLIC_BASE_PERIPHERY_API_URL}}
+      NEXT_PUBLIC_BASE_PERIPHERY_GRAPHQL_URL: ${{vars.NEXT_PUBLIC_BASE_PERIPHERY_GRAPHQL_URL}}
+
+      NEXT_PUBLIC_TESTNET_NEAR_MAIN_ACCOUNT_ID: ${{vars.NEXT_PUBLIC_TESTNET_NEAR_MAIN_ACCOUNT_ID}}
+      NEXT_PUBLIC_MAINNET_NEAR_MAIN_ACCOUNT_ID: ${{vars.NEXT_PUBLIC_MAINNET_NEAR_MAIN_ACCOUNT_ID}}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2 
