--- a/docker/production.yaml
+++ b/docker/production.yaml
@@ -15,6 +15,12 @@ services:
         NEXT_PUBLIC_CIFARM_DATA_NAME: ${NEXT_PUBLIC_CIFARM_DATA_NAME}
         NEXT_PUBLIC_CIFARM_FRAMEWORK_NAME: ${NEXT_PUBLIC_CIFARM_FRAMEWORK_NAME}
         NEXT_PUBLIC_CIFARM_WASM_NAME: ${NEXT_PUBLIC_CIFARM_WASM_NAME}
+
+        NEXT_PUBLIC_BASE_PERIPHERY_API_URL: ${NEXT_PUBLIC_BASE_PERIPHERY_API_URL}
+        NEXT_PUBLIC_BASE_PERIPHERY_GRAPHQL_URL: ${NEXT_PUBLIC_BASE_PERIPHERY_GRAPHQL_URL}
+
+        NEXT_PUBLIC_TESTNET_NEAR_MAIN_ACCOUNT_ID: ${NEXT_PUBLIC_TESTNET_NEAR_MAIN_ACCOUNT_ID}
+        NEXT_PUBLIC_MAINNET_NEAR_MAIN_ACCOUNT_ID: ${NEXT_PUBLIC_MAINNET_NEAR_MAIN_ACCOUNT_ID}
     environment:
       NODE_ENV: ${NODE_ENV}
     ports:
